[gd_scene load_steps=5 format=3 uid="uid://dl1hgfsvcpcfn"]

[ext_resource type="StyleBox" uid="uid://yxqr2ewvhjsy" path="res://Themes/EnemyCreatorSubSectionBorder.tres" id="1_dkgjl"]
[ext_resource type="Script" path="res://Custom/EnemyAbility.gd" id="2_0ntsq"]
[ext_resource type="PackedScene" uid="uid://y0np3uaapuld" path="res://Custom/LabelDataField.tscn" id="3_snn8b"]
[ext_resource type="Texture2D" uid="uid://cimkw4bm0lovt" path="res://Icons/Action.png" id="4_2o1fl"]

[node name="EnemyAbility" type="PanelContainer"]
offset_right = 403.0
offset_bottom = 105.0
theme_override_styles/panel = ExtResource("1_dkgjl")
script = ExtResource("2_0ntsq")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="NameField" parent="VBox/HBoxContainer3" instance=ExtResource("3_snn8b")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
label_text = "Name"
minimum_character_width = 13

[node name="ActionIcon" type="TextureRect" parent="VBox/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("4_2o1fl")
expand_mode = 3

[node name="ActionOption" type="OptionButton" parent="VBox/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 6
popup/item_0/text = " 1-Action"
popup/item_1/text = "2-Actions"
popup/item_1/id = 1
popup/item_2/text = "3-Actions"
popup/item_2/id = 2
popup/item_3/text = "Free"
popup/item_3/id = 3
popup/item_4/text = "Reaction"
popup/item_4/id = 4
popup/item_5/text = "No action"
popup/item_5/id = 5

[node name="CloseButton" type="Button" parent="VBox/HBoxContainer3"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "âœ•"

[node name="TraitsField" parent="VBox" instance=ExtResource("3_snn8b")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Traits"
minimum_character_width = 20

[node name="ReactionTrigger" type="VBoxContainer" parent="VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TriggerLabel" type="Label" parent="VBox/ReactionTrigger"]
layout_mode = 2
text = "Trigger"

[node name="TriggerTextEdit" type="TextEdit" parent="VBox/ReactionTrigger"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="EffectLabel" type="Label" parent="VBox/VBoxContainer2"]
layout_mode = 2
text = "Effect"

[node name="EffectTextEdit" type="TextEdit" parent="VBox/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[connection signal="item_selected" from="VBox/HBoxContainer3/ActionOption" to="." method="_on_action_option_item_selected"]
[connection signal="pressed" from="VBox/HBoxContainer3/CloseButton" to="." method="_on_close_button_pressed"]
